--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>My Website</title>
+  <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-  <div class="container">
-    <h1>Welcome to My Website</h1>
-    <p>This is a sample page.</p>
-  </div>
+  Hello world
   <script src="script.js"></script>
 </body>
+
 </html>
