--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <!-- Logo top‑left -->
     <header>
-      <img class="logo" src="logo.png" alt="Bellywear Logo" />
+      <img class="logo" src="27b4db3c-ffbc-491f-8e7a-24a46aa909ad 1.png" alt="Bellywear Logo" />
 
       <!-- Navigation bar -->
       <nav class="main-nav">
@@ -31,7 +31,7 @@
           <p>Pārdodam vīriešu apģērbus – džemperus, kreklus, šortus, bikses.</p>
         </div>
         <div class="card-image">
-          <img src="model.jpg" alt="Vīrietis apģērbā" />
+          <img src="image 1.png" alt="Vīrietis apģērbā" />
         </div>
       </section>
 
@@ -42,7 +42,7 @@
             <p>Mūsu katalogā ir tādi brendi kā Nike, Adidas, Puma.</p>
           </div>
           <div class="card-image">
-            <img src="brands.jpg" alt="Nike, Adidas, Puma logo" />
+            <img src="image 2.png" alt="Nike, Adidas, Puma logo" />
           </div>
         </div>
         <div class="card">
@@ -50,7 +50,7 @@
             <p>Mēs esam priecīgi apspriest jūsu pirkumu, rakstiet uz mūsu Instagram Bellyshop52</p>
           </div>
           <div class="card-image">
-            <img src="instagram.png" alt="Instagram logo" />
+            <img src="image 3.png" alt="Instagram logo" />
           </div>
         </div>
       </section>
