--- a/katalogs.html
+++ b/katalogs.html
@@ -10,7 +10,6 @@
 <body>
   <div class="wrapper">
     <header>
-      <img class="logo" src="logo.png" alt="Bellywear Logo" />
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">Sākums</a></li>
@@ -26,7 +25,7 @@
           <p>Mūsu jaunākā kolekcija</p>
         </div>
         <div class="card-image">
-          <img src="images/collection.jpg" alt="Jaunākā kolekcija" />
+          <img src="travis-scott-x-fc-barcelona-collection-dropping-may-9th-v0-ywz9c5exobye1.webp" alt="Jaunākā kolekcija" />
         </div>
       </section>
       
@@ -37,7 +36,7 @@
             <p>Kvalitatīvi t-krekli no populārākajiem brendiem</p>
           </div>
           <div class="card-image">
-            <img src="images/tshirts.jpg" alt="T-krekli" />
+            <img src="ts-1046-1.webp" alt="T-krekli" />
           </div>
         </div>
         <div class="card">
@@ -46,7 +45,7 @@
             <p>Moderni džinsi ikdienai</p>
           </div>
           <div class="card-image">
-            <img src="images/jeans.jpg" alt="Džinsi" />
+            <img src="nike-viriesu-sporta-bikses-bv2671t010-melns-193147707526-700c6_reference.webp" alt="Džinsi" />
           </div>
         </div>
       </section>
