--- a/par-mums.html
+++ b/par-mums.html
@@ -10,7 +10,6 @@
 <body>
   <div class="wrapper">
     <header>
-      <img class="logo" src="logo.png" alt="Bellywear Logo" />
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">Sākums</a></li>
@@ -26,7 +25,7 @@
           <p>Mēs esam Bellywear - jūsu uzticamais vīriešu apģērbu veikals.</p>
         </div>
         <div class="card-image">
-          <img src="images/store.jpg" alt="Mūsu veikals" />
+          <img src="webam003-7.jpg" alt="Mūsu veikals" />
         </div>
       </section>
       
@@ -37,7 +36,7 @@
             <p>Profesionāli konsultanti ar ilggadēju pieredzi</p>
           </div>
           <div class="card-image">
-            <img src="images/team.jpg" alt="Mūsu komanda" />
+            <img src="aaaaa" alt="Mūsu komanda" />
           </div>
         </div>
         <div class="card">
@@ -46,7 +45,7 @@
             <p>Atrodamies Rīgas centrā</p>
           </div>
           <div class="card-image">
-            <img src="images/location.jpg" alt="Veikala atrašanās vieta" />
+            <img src="rigas-karte-sia_pilseta24_2021_rigas-karte-sia_24_1021327878_56_9600222573_340x250.jpg" alt="Veikala atrašanās vieta" />
           </div>
         </div>
       </section>
